appId: com.handysuites.app
name: "Vendedor Nav All"
---
- tapOn: "Vender"
- tapOn: "Cobrar"
- tapOn: "Mapa"
- tapOn: "Más"
- tapOn: "Hoy"
